--- a/20191204_wanda_audiLunan/index.html
+++ b/20191204_wanda_audiLunan/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>参与一汽大众万千宠爱只为你活动</title>
   <link rel="stylesheet" href="//minisite.hocodo.com/common/reset.css"/>
-  <link rel="stylesheet" href="res/styles/bundle.css?v=4255cf"/>
+  <link rel="stylesheet" href="res/styles/bundle.css?v=baa52c"/>
   <script src="//minisite.hocodo.com/common/jquery.min.js"></script>
   <script src="//minisite.hocodo.com/common/layer/layer.js"></script>
-  <script src="res/scripts/bundle.js?v=4255cf"></script>
+  <script src="res/scripts/bundle.js?v=baa52c"></script>
   <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
   <script>
     var _hmt = _hmt || [];
@@ -29,21 +29,21 @@
     </div>
   </div>
   <section id="p1">
-    <div class="logo"><img src="res/images/logo.png?v=4255cf"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=4255cf"/></div>
+    <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
+    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
     <div class="content_text">
       <div class="title">万千宠爱只为你</div>
-      <button class="next_page"><img src="res/images/p1_button.png?v=4255cf"/></button>
+      <button class="next_page"><img src="res/images/p1_button.png?v=baa52c"/></button>
       <div class="user_protocol">
         <input id="user_protocol" type="checkbox" checked="checked"/>
         <label for="user_protocol">我已仔细阅读并同意</label><span class="click_see">用户协议</span>
       </div>
     </div>
     <div class="protocol">
-      <div class="logo"><img src="res/images/logo.png?v=4255cf"/></div>
-      <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=4255cf"/></div>
+      <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
+      <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
       <div class="protocol_content">
-        <h2 class="protocol_title"><img src="res/images/protocol_title.png?v=4255cf" alt=""/></h2>
+        <h2 class="protocol_title"><img src="res/images/protocol_title.png?v=baa52c" alt=""/></h2>
         <div class="protocol_text">
           <h3>一、总则</h3>
           <p class="indent">1.1客户在提交信息之前，应当仔细阅读本协议，并同意遵守本协议后方可成为申请客户。</p>
@@ -75,8 +75,8 @@
     </div>
   </section>
   <section id="p2">
-    <div class="logo"><img src="res/images/logo.png?v=4255cf"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=4255cf"/></div>
+    <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
+    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
     <div class="content">
       <div class="title">万千宠爱只为你</div>
       <div class="content_form">
@@ -91,23 +91,23 @@
             <input id="code" type="tel" name="code" maxlength="6" placeholder="验证码"/>
             <button class="code_btn" type="button">获取验证码</button>
           </div>
-          <button class="submit_btn" type="button"><img src="res/images/submit_btn.png?v=4255cf"/></button>
+          <button class="submit_btn" type="button"><img src="res/images/submit_btn.png?v=baa52c"/></button>
         </form>
       </div>
     </div>
   </section>
   <section id="p3">
-    <div class="logo"><img src="res/images/logo.png?v=4255cf"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=4255cf"/></div>
+    <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
+    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
     <div class="content">
       <div class="title">万千宠爱 只为你</div>
       <div class="subtitle">一汽-大众探岳家族&nbsp;&nbsp;探岳&nbsp;&nbsp;探岳X&nbsp;&nbsp;探岳GTE</div>
-      <div class="policy"><img src="res/images/policy.png?v=4255cf" alt=""/></div>
+      <div class="policy"><img src="res/images/policy.png?v=baa52c" alt=""/></div>
     </div>
   </section>
   <section id="p4">
-    <div class="logo"><img src="res/images/logo.png?v=4255cf"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=4255cf"/></div>
+    <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
+    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
     <div class="content">
       <div class="no_prize">
         <h1>很遗憾 您未中奖</h1>
@@ -116,7 +116,7 @@
       <div class="yes_prize">
         <h1>恭喜您中奖</h1>
         <p class="reward">一汽-大众观影套餐</p>
-        <div class="code_img"><img src="res/images/p1.jpg?v=4255cf"/></div>
+        <div class="code_img"><img src="res/images/p1.jpg?v=baa52c"/></div>
         <div class="code_number">3574862145863214569</div>
         <div class="code_tips">
           <p>凭此二维码</p>
@@ -128,7 +128,7 @@
       <div class="already_yes_prize">
         <h1>您已中奖</h1>
         <p class="reward">请勿重复抽奖</p>
-        <div class="code_img"><img src="res/images/p1.jpg?v=4255cf"/></div>
+        <div class="code_img"><img src="res/images/p1.jpg?v=baa52c"/></div>
         <div class="code_number">3574862145863214569</div>
         <div class="code_tips">
           <p>凭此二维码</p>
