--- a/20200921_wanda_dazhong/index.html
+++ b/20200921_wanda_dazhong/index.html
@@ -6,18 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>参与一汽大众万千宠爱只为你活动</title>
   <link rel="stylesheet" href="//minisite.hocodo.com/common/reset.css"/>
-<<<<<<< HEAD:20191204_wanda_audiLunan/index.html
-  <link rel="stylesheet" href="res/styles/bundle.css?v=baa52c"/>
+  <link rel="stylesheet" href="res/styles/bundle.css?v=a35f90"/>
   <script src="//minisite.hocodo.com/common/jquery.min.js"></script>
   <script src="//minisite.hocodo.com/common/layer/layer.js"></script>
-  <script src="res/scripts/bundle.js?v=baa52c"></script>
-=======
-  <link rel="stylesheet" href="res/styles/bundle.css?v=3ba329"/>
-  <script src="//minisite.hocodo.com/common/jquery.min.js"></script>
-  <script src="//minisite.hocodo.com/common/layer/layer.js"></script>
->>>>>>> c587ecffd42bbd3158c27198a788d1af24d95944:20200921_wanda_dazhong/index.html
   <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-  <script src="res/scripts/bundle.js?v=3ba329"></script>
+  <script src="res/scripts/bundle.js?v=a35f90"></script>
   <script>
     var _hmt = _hmt || [];
     (function() {
@@ -27,7 +20,7 @@
         s.parentNode.insertBefore(hm, s);
     })();
   </script>
-  <script src="//minisite.hocodo.com/common/rem.870.js"></script>
+  <script src="//minisite.hocodo.com/common/rem.750.js"></script>
 </head>
 <body>
   <div id="tips">
@@ -36,36 +29,20 @@
     </div>
   </div>
   <section id="p1">
-<<<<<<< HEAD:20191204_wanda_audiLunan/index.html
-    <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
-    <div class="content_text">
-      <div class="title">万千宠爱只为你</div>
-      <button class="next_page"><img src="res/images/p1_button.png?v=baa52c"/></button>
-=======
-    <div class="logo"><img src="res/images/logo.png?v=3ba329"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=3ba329"/></div>
-    <div class="content_text">
-      <div class="title">万千宠爱只为你</div>
-      <button class="next_page"><img src="res/images/p1_button.png?v=3ba329"/></button>
->>>>>>> c587ecffd42bbd3158c27198a788d1af24d95944:20200921_wanda_dazhong/index.html
+    <div class="logo"><img src="res/images/logo.png?v=a35f90"/></div>
+    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=a35f90"/></div>
+    <div class="content_text"><img class="title" src="res/images/p1_title.png?v=a35f90"/>
+      <button class="next_page"><img src="res/images/p1_button.png?v=a35f90"/></button>
       <div class="user_protocol">
         <input id="user_protocol" type="checkbox" checked="checked"/>
         <label for="user_protocol">我已仔细阅读并同意</label><span class="click_see">用户协议</span>
       </div>
     </div>
     <div class="protocol">
-<<<<<<< HEAD:20191204_wanda_audiLunan/index.html
-      <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
-      <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
+      <div class="logo"><img src="res/images/logo.png?v=a35f90"/></div>
+      <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=a35f90"/></div>
       <div class="protocol_content">
-        <h2 class="protocol_title"><img src="res/images/protocol_title.png?v=baa52c" alt=""/></h2>
-=======
-      <div class="logo"><img src="res/images/logo.png?v=3ba329"/></div>
-      <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=3ba329"/></div>
-      <div class="protocol_content">
-        <h2 class="protocol_title"><img src="res/images/protocol_title.png?v=3ba329" alt=""/></h2>
->>>>>>> c587ecffd42bbd3158c27198a788d1af24d95944:20200921_wanda_dazhong/index.html
+        <h2 class="protocol_title"><img src="res/images/protocol_title.png?v=a35f90" alt=""/></h2>
         <div class="protocol_text">
           <h3>一、总则</h3>
           <p class="indent">1.1客户在提交信息之前，应当仔细阅读本协议，并同意遵守本协议后方可成为申请客户。</p>
@@ -97,15 +74,9 @@
     </div>
   </section>
   <section id="p2">
-<<<<<<< HEAD:20191204_wanda_audiLunan/index.html
-    <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
-=======
-    <div class="logo"><img src="res/images/logo.png?v=3ba329"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=3ba329"/></div>
->>>>>>> c587ecffd42bbd3158c27198a788d1af24d95944:20200921_wanda_dazhong/index.html
-    <div class="content">
-      <div class="title">万千宠爱只为你</div>
+    <div class="logo"><img src="res/images/logo.png?v=a35f90"/></div>
+    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=a35f90"/></div>
+    <div class="content"><img class="title" src="res/images/p2_title.png?v=a35f90"/>
       <div class="content_form">
         <form id="info">
           <div class="input_box">
@@ -118,41 +89,19 @@
             <input id="code" type="tel" name="code" maxlength="6" placeholder="验证码"/>
             <button class="code_btn" type="button">获取验证码</button>
           </div>
-<<<<<<< HEAD:20191204_wanda_audiLunan/index.html
-          <button class="submit_btn" type="button"><img src="res/images/submit_btn.png?v=baa52c"/></button>
-=======
-          <button class="submit_btn" type="button"><img src="res/images/submit_btn.png?v=3ba329"/></button>
->>>>>>> c587ecffd42bbd3158c27198a788d1af24d95944:20200921_wanda_dazhong/index.html
+          <button class="submit_btn" type="button"><img src="res/images/submit_btn.png?v=a35f90"/></button>
         </form>
       </div>
     </div>
   </section>
   <section id="p3">
-<<<<<<< HEAD:20191204_wanda_audiLunan/index.html
-    <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
-    <div class="content">
-      <div class="title">万千宠爱 只为你</div>
-      <div class="subtitle">一汽-大众探岳家族&nbsp;&nbsp;探岳&nbsp;&nbsp;探岳X&nbsp;&nbsp;探岳GTE</div>
-      <div class="policy"><img src="res/images/policy.png?v=baa52c" alt=""/></div>
-    </div>
+    <div class="logo"><img src="res/images/logo.png?v=a35f90"/></div>
+    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=a35f90"/></div>
+    <div class="content"><img src="res/images/p3_content.png?v=a35f90" alt=""/></div>
   </section>
   <section id="p4">
-    <div class="logo"><img src="res/images/logo.png?v=baa52c"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=baa52c"/></div>
-=======
-    <div class="logo"><img src="res/images/logo.png?v=3ba329"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=3ba329"/></div>
-    <div class="content">
-      <div class="title">万千宠爱 只为你</div>
-      <div class="subtitle">一汽-大众探岳家族&nbsp;&nbsp;探岳&nbsp;&nbsp;探岳X&nbsp;&nbsp;探岳GTE</div>
-      <div class="policy"><img src="res/images/policy.png?v=3ba329" alt=""/></div>
-    </div>
-  </section>
-  <section id="p4">
-    <div class="logo"><img src="res/images/logo.png?v=3ba329"/></div>
-    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=3ba329"/></div>
->>>>>>> c587ecffd42bbd3158c27198a788d1af24d95944:20200921_wanda_dazhong/index.html
+    <div class="logo"><img src="res/images/logo.png?v=a35f90"/></div>
+    <div class="bottom_logo"><img src="res/images/bottom_logo.png?v=a35f90"/></div>
     <div class="content">
       <div class="no_prize">
         <h1>很遗憾 您未中奖</h1>
@@ -161,11 +110,7 @@
       <div class="yes_prize">
         <h1>恭喜您中奖</h1>
         <p class="reward">一汽-大众观影套餐</p>
-<<<<<<< HEAD:20191204_wanda_audiLunan/index.html
-        <div class="code_img"><img src="res/images/p1.jpg?v=baa52c"/></div>
-=======
-        <div class="code_img"><img src="res/images/p1.jpg?v=3ba329"/></div>
->>>>>>> c587ecffd42bbd3158c27198a788d1af24d95944:20200921_wanda_dazhong/index.html
+        <div class="code_img"><img src="res/images/p1.jpg?v=a35f90"/></div>
         <div class="code_number">3574862145863214569</div>
         <div class="code_tips">
           <p>凭此二维码</p>
@@ -177,11 +122,7 @@
       <div class="already_yes_prize">
         <h1>您已中奖</h1>
         <p class="reward">请勿重复抽奖</p>
-<<<<<<< HEAD:20191204_wanda_audiLunan/index.html
-        <div class="code_img"><img src="res/images/p1.jpg?v=baa52c"/></div>
-=======
-        <div class="code_img"><img src="res/images/p1.jpg?v=3ba329"/></div>
->>>>>>> c587ecffd42bbd3158c27198a788d1af24d95944:20200921_wanda_dazhong/index.html
+        <div class="code_img"><img src="res/images/p1.jpg?v=a35f90"/></div>
         <div class="code_number">3574862145863214569</div>
         <div class="code_tips">
           <p>凭此二维码</p>
